// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerOverlay renders Text + Image + Button 1`] = `
Array [
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow xsDirectionColumn"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 348,
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionColumn"
      >
        <div
          className="FlexItem"
        >
          <div
            className="Flex rowGap400 columnGap400 xsDirectionRow"
          >
            <div
              className="FlexItem"
            >
              <div
                aria-hidden={true}
                className="box"
              >
                <div
                  className="Mask rounding2 willChangeTransform"
                  style={
                    Object {
                      "height": 32,
                      "width": 32,
                    }
                  }
                >
                  <div
                    className="box relative"
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "paddingBottom": "100%",
                      }
                    }
                  >
                    <img
                      alt=""
                      className="img"
                      fetchpriority="auto"
                      loading="auto"
                      onError={[Function]}
                      onLoad={[Function]}
                      src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="FlexItem flexGrow"
            >
              <div
                className="Flex rowGap400 columnGap400 justifyBetween xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
                  >
                    Text, image and button
                  </div>
                </div>
              </div>
              <span
                className="textColorOverrideLight"
              >
                <span
                  className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
                >
                  Saved to
                   
                  <a
                    className="noOutline inheritColor rounding0 inlineBlock tapTransition hoverUnderline noUnderline outlineFocus"
                    href="https://www.pinterest.com/search/pins/?q=home%20decor"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    rel=""
                  >
                    Home decor
                  </a>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          className="FlexItem selfEnd"
        >
          <div
            className="Flex rowGap200 columnGap200 flexWrap xsDirectionRow"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 900,
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            aria-hidden={true}
            className="box"
          >
            <div
              className="Mask rounding2 willChangeTransform"
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              }
            >
              <div
                className="box relative"
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": "100%",
                  }
                }
              >
                <img
                  alt=""
                  className="img"
                  fetchpriority="auto"
                  loading="auto"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionColumn"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text, image and button
            </div>
            <span
              className="textColorOverrideLight"
            >
              <span
                className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
              >
                Saved to
                 
                <a
                  className="noOutline inheritColor rounding0 inlineBlock tapTransition hoverUnderline noUnderline outlineFocus"
                  href="https://www.pinterest.com/search/pins/?q=home%20decor"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyPress={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  rel=""
                >
                  Home decor
                </a>
              </span>
            </span>
          </div>
        </div>
        <div
          className="FlexItem flexNone selfCenter"
        >
          <div
            className="Flex rowGap200 columnGap200 xsDirectionRow"
          />
        </div>
        <div
          className="FlexItem selfCenter"
        >
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`BannerOverlay renders Text + Image 1`] = `
Array [
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow xsDirectionColumn"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 348,
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionColumn"
      >
        <div
          className="FlexItem"
        >
          <div
            className="Flex rowGap400 columnGap400 xsDirectionRow"
          >
            <div
              className="FlexItem"
            >
              <div
                aria-hidden={true}
                className="box"
              >
                <div
                  className="Mask rounding2 willChangeTransform"
                  style={
                    Object {
                      "height": 32,
                      "width": 32,
                    }
                  }
                >
                  <div
                    className="box relative"
                    style={
                      Object {
                        "backgroundColor": "transparent",
                        "paddingBottom": "100%",
                      }
                    }
                  >
                    <img
                      alt=""
                      className="img"
                      fetchpriority="auto"
                      loading="auto"
                      onError={[Function]}
                      onLoad={[Function]}
                      src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="FlexItem flexGrow"
            >
              <div
                className="Flex rowGap400 columnGap400 justifyBetween xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
                  >
                    Text and Image
                  </div>
                </div>
              </div>
              <span
                className="textColorOverrideLight"
              >
                <span
                  className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
                >
                  Saved to
                   
                  <a
                    className="noOutline inheritColor rounding0 inlineBlock tapTransition hoverUnderline noUnderline outlineFocus"
                    href="https://www.pinterest.com/search/pins/?q=home%20decor"
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onKeyPress={[Function]}
                    onMouseDown={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    onMouseUp={[Function]}
                    onTouchCancel={[Function]}
                    onTouchEnd={[Function]}
                    onTouchMove={[Function]}
                    onTouchStart={[Function]}
                    rel=""
                  >
                    Home decor
                  </a>
                </span>
              </span>
            </div>
          </div>
        </div>
        <div
          className="FlexItem selfEnd"
        >
          <div
            className="Flex rowGap200 columnGap200 flexWrap xsDirectionRow"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 900,
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow"
      >
        <div
          className="FlexItem"
        >
          <div
            aria-hidden={true}
            className="box"
          >
            <div
              className="Mask rounding2 willChangeTransform"
              style={
                Object {
                  "height": 32,
                  "width": 32,
                }
              }
            >
              <div
                className="box relative"
                style={
                  Object {
                    "backgroundColor": "transparent",
                    "paddingBottom": "100%",
                  }
                }
              >
                <img
                  alt=""
                  className="img"
                  fetchpriority="auto"
                  loading="auto"
                  onError={[Function]}
                  onLoad={[Function]}
                  src="https://i.pinimg.com/474x/b2/55/ed/b255edbf773ffb3985394e6efb9d2a49.jpg"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionColumn"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
            <span
              className="textColorOverrideLight"
            >
              <span
                className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
              >
                Saved to
                 
                <a
                  className="noOutline inheritColor rounding0 inlineBlock tapTransition hoverUnderline noUnderline outlineFocus"
                  href="https://www.pinterest.com/search/pins/?q=home%20decor"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyPress={[Function]}
                  onMouseDown={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  onMouseUp={[Function]}
                  onTouchCancel={[Function]}
                  onTouchEnd={[Function]}
                  onTouchMove={[Function]}
                  onTouchStart={[Function]}
                  rel=""
                >
                  Home decor
                </a>
              </span>
            </span>
          </div>
        </div>
        <div
          className="FlexItem flexNone selfCenter"
        >
          <div
            className="Flex rowGap200 columnGap200 xsDirectionRow"
          />
        </div>
        <div
          className="FlexItem selfCenter"
        >
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`BannerOverlay renders Text only 1`] = `
Array [
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow xsDirectionColumn"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 348,
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionColumn"
      >
        <div
          className="FlexItem"
        >
          <div
            className="Flex rowGap400 columnGap400 xsDirectionRow"
          >
            <div
              className="FlexItem flexGrow"
            >
              <div
                className="Flex rowGap400 columnGap400 justifyBetween xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
                  >
                    Profile
                  </div>
                </div>
              </div>
              <span
                className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
                style={
                  Object {
                    "WebkitLineClamp": 2,
                  }
                }
              >
                Same great profile, slightly new look. Learn more?
              </span>
            </div>
          </div>
        </div>
        <div
          className="FlexItem selfEnd"
        >
          <div
            className="Flex rowGap200 columnGap200 flexWrap xsDirectionRow"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 900,
          "top": 0,
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionColumn"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Profile
            </div>
            <span
              className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
              style={
                Object {
                  "WebkitLineClamp": 2,
                }
              }
            >
              Same great profile, slightly new look. Learn more?
            </span>
          </div>
        </div>
        <div
          className="FlexItem flexNone selfCenter"
        >
          <div
            className="Flex rowGap200 columnGap200 xsDirectionRow"
          />
        </div>
        <div
          className="FlexItem selfCenter"
        >
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`BannerOverlay renders in desktop device 1`] = `
Array [
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow xsDirectionColumn"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 348,
          "top": 15,
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionColumn"
      >
        <div
          className="FlexItem"
        >
          <div
            className="Flex rowGap400 columnGap400 xsDirectionRow"
          >
            <div
              className="FlexItem flexGrow"
            >
              <div
                className="Flex rowGap400 columnGap400 justifyBetween xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
                  >
                    Text and Image
                  </div>
                </div>
              </div>
              <span
                className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
                style={
                  Object {
                    "WebkitLineClamp": 2,
                  }
                }
              >
                A description
              </span>
            </div>
          </div>
        </div>
        <div
          className="FlexItem selfEnd"
        >
          <div
            className="Flex rowGap200 columnGap200 flexWrap xsDirectionRow"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 900,
          "top": 15,
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionColumn"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
            <span
              className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
              style={
                Object {
                  "WebkitLineClamp": 2,
                }
              }
            >
              A description
            </span>
          </div>
        </div>
        <div
          className="FlexItem flexNone selfCenter"
        >
          <div
            className="Flex rowGap200 columnGap200 xsDirectionRow"
          />
        </div>
        <div
          className="FlexItem selfCenter"
        >
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`BannerOverlay renders in mobile device 1`] = `
Array [
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow xsDirectionColumn"
      style={
        Object {
          "bottom": 10,
          "left": "50%",
          "maxWidth": 348,
          "top": "unset",
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionColumn"
      >
        <div
          className="FlexItem"
        >
          <div
            className="Flex rowGap400 columnGap400 xsDirectionRow"
          >
            <div
              className="FlexItem flexGrow"
            >
              <div
                className="Flex rowGap400 columnGap400 justifyBetween xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
                  >
                    Text and Image
                  </div>
                </div>
              </div>
              <span
                className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
                style={
                  Object {
                    "WebkitLineClamp": 2,
                  }
                }
              >
                A description
              </span>
            </div>
          </div>
        </div>
        <div
          className="FlexItem selfEnd"
        >
          <div
            className="Flex rowGap200 columnGap200 flexWrap xsDirectionRow"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow"
      style={
        Object {
          "bottom": 10,
          "left": "50%",
          "maxWidth": 900,
          "top": "unset",
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionColumn"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
            <span
              className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
              style={
                Object {
                  "WebkitLineClamp": 2,
                }
              }
            >
              A description
            </span>
          </div>
        </div>
        <div
          className="FlexItem flexNone selfCenter"
        >
          <div
            className="Flex rowGap200 columnGap200 xsDirectionRow"
          />
        </div>
        <div
          className="FlexItem selfCenter"
        >
           
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`BannerOverlay renders in mobile device with reversed offset 1`] = `
Array [
  <div
    className="box smDisplayNone xsDisplayFlex"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow xsDirectionColumn"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 348,
          "top": 15,
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionColumn"
      >
        <div
          className="FlexItem"
        >
          <div
            className="Flex rowGap400 columnGap400 xsDirectionRow"
          >
            <div
              className="FlexItem flexGrow"
            >
              <div
                className="Flex rowGap400 columnGap400 justifyBetween xsDirectionRow"
              >
                <div
                  className="FlexItem"
                >
                  <div
                    className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
                  >
                    Text and Image
                  </div>
                </div>
              </div>
              <span
                className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
                style={
                  Object {
                    "WebkitLineClamp": 2,
                  }
                }
              >
                A description
              </span>
            </div>
          </div>
        </div>
        <div
          className="FlexItem selfEnd"
        >
          <div
            className="Flex rowGap200 columnGap200 flexWrap xsDirectionRow"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="box smDisplayFlex xsDisplayNone"
  >
    <div
      className="box default fixed paddingX400 paddingY400 rounding4 shadow"
      style={
        Object {
          "bottom": "unset",
          "left": "50%",
          "maxWidth": 900,
          "top": 15,
          "transform": "translateX(-50%)",
          "width": "calc(100% - var(--space-800)",
        }
      }
    >
      <div
        className="Flex rowGap400 columnGap400 xsDirectionRow"
      >
        <div
          className="FlexItem flexGrow"
        >
          <div
            className="Flex rowGap0 columnGap0 xsDirectionColumn"
          >
            <div
              className="default alignStart breakWord Text fontSize300 fontWeightSemiBold"
            >
              Text and Image
            </div>
            <span
              className="default alignStart breakWord lineClamp Text fontSize300 fontWeightNormal"
              style={
                Object {
                  "WebkitLineClamp": 2,
                }
              }
            >
              A description
            </span>
          </div>
        </div>
        <div
          className="FlexItem flexNone selfCenter"
        >
          <div
            className="Flex rowGap200 columnGap200 xsDirectionRow"
          />
        </div>
        <div
          className="FlexItem selfCenter"
        >
           
        </div>
      </div>
    </div>
  </div>,
]
`;
